--- a/sass/components/_events.scss
+++ b/sass/components/_events.scss
@@ -7,16 +7,10 @@
 	padding-bottom: 50px;
 	padding-top: 100px;
 
-
-	// & .container {
-	// 	position: relative;
-	// }
-
 	&__container {
 		position: relative;
 		max-width: 1296px;
 		margin: 0 auto;
-		overflow-x: hidden;
 		padding: 10px;
 	}
 
