--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -518,11 +518,11 @@
 		border: 1px solid #000;
 		position: absolute;
 		width: 200px;
-		height: 200px;
+		height: 220px;
 		bottom: 95%;
 		right: 95%;
 		z-index: 23;
-		padding: 20px 7px 7px;
+		padding: 20px 10px 10px;
 		background: #fff;
 		box-shadow: #485d74bf 8px 8px;
 	
