--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -24,6 +24,11 @@
       }
    }
 
+   &__item {
+      display: flex;
+      align-items: center;
+   }
+
 
 }
 
